--- a/app/src/main/res/layout/fragment_sing_in.xml
+++ b/app/src/main/res/layout/fragment_sing_in.xml
@@ -13,8 +13,8 @@
             android:text="alex@gmail.com"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
-            android:textColor="@color/text_white_selected"
-            android:textColorHint="@color/hint_color"
+            android:textColor="@color/textWhiteSelected"
+            android:textColorHint="@color/hintColor"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginBottom="@dimen/margin_xs"
@@ -26,9 +26,9 @@
             android:layout_height="@dimen/button_height"
             android:hint="@string/password"
             android:text="fender"
-            android:textColorHint="@color/hint_color"
+            android:textColorHint="@color/hintColor"
             android:inputType="textPassword"
-            android:textColor="@color/text_white_selected"
+            android:textColor="@color/textWhiteSelected"
             app:layout_constraintEnd_toStartOf="@+id/etEmail"
             app:layout_constraintStart_toEndOf="@+id/etEmail"
             android:layout_marginBottom="@dimen/margin_xxxl"
@@ -42,7 +42,7 @@
             android:layout_alignParentEnd="true"
             android:background="@color/colorPrimary"
             android:text="@string/login"
-            android:textColor="@color/text_white_selected"
+            android:textColor="@color/textWhiteSelected"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="@dimen/button_margin_bottom"
             app:layout_constraintStart_toEndOf="@+id/etPassword"
@@ -59,7 +59,7 @@
             android:layout_marginTop="@dimen/margin_xs"
             android:gravity="center"
             android:text="@string/login_register"
-            android:textColor="@color/text_white_selected"
+            android:textColor="@color/textWhiteSelected"
             android:textSize="@dimen/text_s"
             app:layout_constraintTop_toBottomOf="@+id/btnLogin"
             app:layout_constraintStart_toEndOf="@+id/btnLogin"
@@ -73,7 +73,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="@string/havent_register_yet"
-            android:textColor="@color/text_white_selected"
+            android:textColor="@color/textWhiteSelected"
             android:textSize="@dimen/text_m"
             app:layout_constraintTop_toBottomOf="@+id/btnLogin"
             app:layout_constraintEnd_toStartOf="@+id/btnLogin"
