--- a/app/src/main/res/layout/item_card_participant.xml
+++ b/app/src/main/res/layout/item_card_participant.xml
@@ -34,7 +34,7 @@
                 android:id="@+id/tv_user_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/color_black"
+                android:textColor="@color/colorBlack"
                 android:text="Имя участника, тыры пыты"
                 android:textSize="@dimen/text_l"
                 card_view:layout_constraintStart_toEndOf="@+id/iv_user_image"
@@ -47,7 +47,7 @@
                 android:layout_width="241dp"
                 android:layout_height="84dp"
                 android:gravity="center"
-                android:textColor="@color/color_black"
+                android:textColor="@color/colorBlack"
                 android:text="Опыт участника и т.д. Далi буде =)"
                 android:textSize="@dimen/text_l"
                 card_view:layout_constraintStart_toEndOf="@+id/iv_user_image"
