--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,21 +21,21 @@
 
     <style name="TextBottomNavigation">
         <item name="android:textSize">@dimen/text_xs</item>
-        <item name="android:textColor">@color/text_white_unselected</item>
+        <item name="android:textColor">@color/textWhiteUnselected</item>
     </style>
 
     <style name="TextXS">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/text_xs</item>
-        <item name="android:textColor">@color/color_black</item>
+        <item name="android:textColor">@color/colorBlack</item>
     </style>
 
     <style name="TextS">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/text_s</item>
-        <item name="android:textColor">@color/color_black</item>
+        <item name="android:textColor">@color/colorBlack</item>
     </style>
 
     <style name="ButtonS">
@@ -43,14 +43,14 @@
         <item name="android:layout_height">32dp</item>
         <item name="android:background">@color/colorPrimary</item>
         <item name="android:textSize">@dimen/text_xs</item>
-        <item name="android:textColor">@color/color_white</item>
+        <item name="android:textColor">@color/colorWhite</item>
     </style>
 
 
     <style name="HeaderTextFont" parent="@android:style/TextAppearance.Small">
         <item name="android:fontFamily">@font/kon_kord_retro</item>
         <item name="android:textSize">@dimen/text_xl</item>
-        <item name="android:textColor">@color/color_white</item>
+        <item name="android:textColor">@color/colorWhite</item>
     </style>
 
 
