--- a/app/src/main/res/drawable/rect.xml
+++ b/app/src/main/res/drawable/rect.xml
@@ -7,6 +7,6 @@
     <stroke
         android:width="1dp"
         android:height = "10dp"
-        android:color="@color/color_grey" />
+        android:color="@color/colorGrey" />
 
 </shape>
