--- a/app/src/main/res/drawable/shadow.xml
+++ b/app/src/main/res/drawable/shadow.xml
@@ -14,7 +14,7 @@
             android:top="0dp"
             android:bottom="2dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/background_header"/>
+            <solid android:color="@color/backgroundHeader"/>
             <corners android:radius="2dp" />
         </shape>
     </item>
