--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,7 +20,7 @@
             android:id="@+id/tvUserName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/color_black"
+            android:textColor="@color/colorBlack"
             android:text="Alexandr"
             android:textSize="@dimen/text_l"
             android:layout_marginStart="8dp"
