--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -12,8 +12,8 @@
             android:layout_height="@dimen/button_height"
             android:hint="@string/user_name"
             android:inputType="textEmailAddress"
-            android:textColor="@color/text_white_selected"
-            android:textColorHint="@color/hint_color"
+            android:textColor="@color/textWhiteSelected"
+            android:textColorHint="@color/hintColor"
             android:layout_marginBottom="@dimen/margin_xs"
             app:layout_constraintBottom_toTopOf="@+id/etEmail"
             app:layout_constraintEnd_toEndOf="parent"
@@ -26,8 +26,8 @@
             android:layout_height="@dimen/button_height"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
-            android:textColor="@color/text_white_selected"
-            android:textColorHint="@color/hint_color"
+            android:textColor="@color/textWhiteSelected"
+            android:textColorHint="@color/hintColor"
             app:layout_constraintStart_toEndOf="@+id/etDisplayName"
             app:layout_constraintEnd_toStartOf="@+id/etDisplayName"
             android:layout_marginBottom="@dimen/margin_xs"
@@ -40,8 +40,8 @@
             android:inputType="textPassword"
             android:layout_width="@dimen/button_width"
             android:layout_height="@dimen/button_height"
-            android:textColor="@color/text_white_selected"
-            android:textColorHint="@color/hint_color"
+            android:textColor="@color/textWhiteSelected"
+            android:textColorHint="@color/hintColor"
             app:layout_constraintStart_toEndOf="@+id/etEmail"
             app:layout_constraintEnd_toStartOf="@+id/etEmail"
             android:layout_marginBottom="@dimen/margin_xs"
@@ -55,7 +55,7 @@
             android:layout_alignParentEnd="true"
             android:background="@color/colorPrimary"
             android:text="@string/register"
-            android:textColor="@color/text_white_selected"
+            android:textColor="@color/textWhiteSelected"
             app:layout_constraintStart_toEndOf="@+id/etPassword"
             app:layout_constraintEnd_toStartOf="@+id/etPassword"
             android:layout_marginBottom="@dimen/button_margin_bottom"
