--- a/app/src/main/res/layout/item_card_news.xml
+++ b/app/src/main/res/layout/item_card_news.xml
@@ -32,7 +32,7 @@
             android:layout_marginBottom="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:textColor="@color/color_black"
+            android:textColor="@color/colorBlack"
             android:text="Презентация спортивного туризма тк Романтик"
             android:textSize="@dimen/text_s" />
 
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:textColor="@color/color_black"
+            android:textColor="@color/colorBlack"
             android:layout_below="@+id/tv_card_item_news_title"
             android:layout_marginBottom="8dp"
             android:layout_marginStart="8dp"
