--- a/app/src/main/res/layout/item_card_user.xml
+++ b/app/src/main/res/layout/item_card_user.xml
@@ -33,7 +33,7 @@
                 android:id="@+id/tv_user_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/color_black"
+                android:textColor="@color/colorBlack"
                 android:text="Alexandr"
                 android:textSize="@dimen/text_l"
                 card_view:layout_constraintStart_toEndOf="@+id/iv_user_image"
