--- a/app/src/main/res/layout/layout_hike_header.xml
+++ b/app/src/main/res/layout/layout_hike_header.xml
@@ -53,7 +53,7 @@
                             android:layout_marginStart="@dimen/margin_s"
                             android:textSize="@dimen/text_m"
                             android:text="Черногорский хребет, Карпаты"
-                            android:textColor="@color/text_white_selected" android:layout_alignParentStart="true"
+                            android:textColor="@color/textWhiteSelected" android:layout_alignParentStart="true"
                             android:layout_marginTop="11dp" android:layout_alignParentTop="true"/>
 
 
@@ -65,7 +65,7 @@
                             android:layout_marginTop="@dimen/margin_xs"
                             android:layout_marginEnd="@dimen/margin_m"
                             android:text="пвд"
-                            android:textColor="@color/text_white_selected"/>
+                            android:textColor="@color/textWhiteSelected"/>
 
 
                     <TextView
@@ -74,7 +74,7 @@
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/card_hike_region"
                             android:text="27.09.18-02.10.18"
-                            android:textColor="@color/text_white_selected"
+                            android:textColor="@color/textWhiteSelected"
                             android:layout_alignParentEnd="true"
                             android:layout_marginEnd="@dimen/margin_m"/>
 
