--- a/app/src/main/res/layout/user_profile_activity.xml
+++ b/app/src/main/res/layout/user_profile_activity.xml
@@ -11,13 +11,16 @@
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
             android:background="@color/colorPrimary"
-            app:titleTextColor="@android:color/background_light">
+            app:titleTextColor="@android:color/background_light"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
                 android:id="@+id/toolbar_profile_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/text_white_selected"
+                android:textColor="@color/textWhiteSelected"
                 android:textSize="@dimen/text_xl"/>
 
     </androidx.appcompat.widget.Toolbar>
