--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#444869</color>
-    <color name="colorPrimaryDark"> #141730</color>
+    <color name="colorPrimaryDark">#141730</color>
     <color name="colorAccent">#FFD15C</color>
     <color name="colorGreen">#00A018</color>
-    <color name="background">#D9DDFF </color>
-    <color name="background_header">#9ca1c9</color>
-    <color name="bottom_navigation_view_color">#bf3d4269</color>
-    <color name="color_grey">#cb444869</color>
-    <color name="hint_color">#77FFFFFF</color>
-    <color name="color_grey_700">#616161</color>
-    <color name="text_white_unselected">#A3FFFFFF</color>
-    <color name="text_white_selected">#ffffff</color>
-    <color name="color_white">#ffffff</color>
-    <color name="color_black">#000000</color>
+    <color name="colorWhite">#ffffff</color>
+    <color name="colorBlack">#000000</color>
     <color name="colorRed">#BD1515</color>
     <color name="colorOrange">#FF5722</color>
+    <color name="colorGrey">#cb444869</color>
+    <color name="colorGrey_700">#616161</color>
 
+    <color name="background">#D9DDFF</color>
+    <color name="backgroundHeader">#9ca1c9</color>
+    <color name="bottomNavigationViewColor">#bf3d4269</color>
+    <color name="hintColor">#77FFFFFF</color>
+    <color name="textWhiteUnselected">#A3FFFFFF</color>
+    <color name="textWhiteSelected">#ffffff</color>
 </resources>
