--- a/app/src/main/res/layout/fragment_build_route.xml
+++ b/app/src/main/res/layout/fragment_build_route.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:orientation="vertical"
         android:layout_height="match_parent">
-
-    <include layout="@layout/layout_create_route_header"/>
 
     <org.osmdroid.views.MapView
             android:id="@+id/map"
@@ -15,4 +15,16 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <include layout="@layout/layout_create_route_header"
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintTop_toTopOf="parent"
+             app:layout_constraintEnd_toEndOf="parent"/>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/margin_m"
+            app:srcCompat="@drawable/osm_ic_follow_me_on"
+            android:id="@+id/fabBuildRoute"/>
+
+</FrameLayout>
