--- a/app/src/main/res/layout/item_build_route.xml
+++ b/app/src/main/res/layout/item_build_route.xml
@@ -2,11 +2,11 @@
 <androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view_participant"
+        android:id="@+id/card_view_build_route"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        card_view:cardBackgroundColor="@color/colorGreen"
+        card_view:cardBackgroundColor="@color/bottomNavigationViewColor"
         android:layout_marginBottom="5dp"
         card_view:cardCornerRadius="@dimen/cardview_default_radius"
         card_view:cardElevation="3dp">
@@ -17,27 +17,28 @@
             android:layout_height="50dp">
 
         <TextView
-                android:text="Добавить точку..."
                 style="@style/HeaderTextFont.Bold"
                 android:textSize="@dimen/text_xl"
                 android:textColor="@color/colorWhite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                card_view:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+                card_view:layout_constraintTop_toTopOf="parent"
+                android:layout_marginBottom="8dp"
                 card_view:layout_constraintBottom_toBottomOf="parent"
-                android:id="@+id/textView2"
-                card_view:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginStart="8dp"/>
+                android:id="@+id/btnBuildRoute"
+                card_view:layout_constraintStart_toEndOf="@+id/ivPointType"
+                android:layout_marginStart="8dp"/>
 
 
         <ImageView
-                android:src="@drawable/ic_add"
+                android:src="@drawable/ic_find_road"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                card_view:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+                android:layout_height="match_parent"
+                card_view:layout_constraintTop_toTopOf="parent"
                 card_view:layout_constraintBottom_toBottomOf="parent"
-                card_view:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                android:id="@+id/imageView"
+                card_view:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="@dimen/margin_xs"
+                android:id="@+id/ivPointType"
         />
 
 
