--- a/app/src/main/res/layout/item_route_point.xml
+++ b/app/src/main/res/layout/item_route_point.xml
@@ -18,32 +18,29 @@
             android:layout_height="50dp">
 
         <TextView
-
-                android:text="Одесса, Шампонский пер.11А"
                 style="@style/HeaderTextFont.Bold"
                 android:textSize="@dimen/text_xl"
                 android:textColor="@color/colorWhite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 card_view:layout_constraintTop_toTopOf="parent"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="@dimen/margin_xs"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 android:id="@+id/tvPointName"
-                card_view:layout_constraintStart_toEndOf="@+id/imageView"
-                android:layout_marginStart="8dp"/>
+                card_view:layout_constraintStart_toEndOf="@+id/ivPointType"
+                android:layout_marginStart="@dimen/margin_xs"/>
 
 
         <ImageView
-                android:src="@drawable/ic_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/margin_xs"
                 card_view:layout_constraintTop_toTopOf="parent"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="@dimen/margin_xs"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"
-                android:id="@+id/imageView"/>
+                android:layout_marginStart="@dimen/margin_xs"
+                android:id="@+id/ivPointType"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
