--- a/app/src/main/res/layout/item_card_participant.xml
+++ b/app/src/main/res/layout/item_card_participant.xml
@@ -2,11 +2,12 @@
 <androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/card_view_participant"
+        android:id="@+id/card_view_participant"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginStart="@dimen/margin_s"
+        android:layout_marginEnd="@dimen/margin_s"
+        android:layout_marginTop="@dimen/margin_s"
         card_view:cardCornerRadius="10dp"
         card_view:cardElevation="3dp"
         card_view:cardPreventCornerOverlap="false"
